Workng on the menu of the web
Workng on the menu of the web

--- a/index.html
+++ b/index.html
@@ -4,21 +4,18 @@
 <meta charset="utf-8">
 <title>Responsive Layout</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<link ref="stylesheet" href="css/normalize.css">
-<link ref="stylesheet" href="css/style.css">
+<link rel="stylesheet" href="css/normalize.css">
+<link rel="stylesheet" href="css/main.css">
 <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
 </head>
 <body>
-	<div class="wrapper">
-		<header>
-			<h1>Student Name</h1>
-			<nav>
-				<ul>
-				<li>home</li>
-				<li>portfolio</li>
-				<li>contact</li>
-				</ul>
-			</nav>
+		<header class="header">
+			<h1 class="logo">Student Name</h1>
+			 <ul class="nav">
+		          <li><a href="#">home</a></li>
+		          <li><a href="#">portfolop</a></li>
+		          <li><a href="#">contact</a></li>
+       		 </ul>
 		</header>
 
 		<main>
@@ -84,6 +81,5 @@
 				</nav>
 			</footer>
 		</main>
-	</div>
 </body>
 </html>
