Mobile Layout Update
updated the hr line color

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 
 			<footer class="main-footer">
 				<div class="container clearfix">
-					<hr />
+					<hr class="seperate-style" />
 					<div class="footer-left">Student Name</div>
 					<div class="footer-right">
 						<ul class="footer-nav">
