Completed 768 width screen UI
Completed 768 width screen UI

--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
 </head>
 <body>
 		<header class="main-header">
-			<div class="container clearfix">
+			<div class="main-nav-container container clearfix">
 				<h1 class="name">Student Name</h1>
 				 <ul class="main-nav">
 			          <li><a href="#">home</a></li>
-			          <li><a href="#">portfolop</a></li>
+			          <li><a href="#">portfolio</a></li>
 			          <li><a href="#">contact</a></li>
 	       		 </ul>
 	       	</div><!-- / container  -->
@@ -23,7 +23,7 @@
 		<main>
 			<section class="about-me">
 				<div class="container clearfix">
-					<img class="profile-picture" src="images/responsive-layout-profile.png" alt="developer-face">
+					<img src="images/responsive-layout-profile.png" alt="developer-face">
 					<p>Hi! I', a front-end developer who loves responsive design and css. I recently finished learning front-end web development at Treehouse and i am excited to put all my skills to use!</p>
 				</div><!-- / container  -->
 			</section><!-- / about-me  -->
@@ -89,7 +89,7 @@
 					<div class="footer-right">
 						<ul class="footer-nav">
 				          <li><a href="#">home</a></li>
-				          <li><a href="#">portfolop</a></li>
+				          <li><a href="#">portfolio</a></li>
 				          <li><a href="#">contact</a></li>
 		       		 	</ul>
 						<span class="back-top-top">back to top</span>
