--- a/index.html
+++ b/index.html
@@ -9,26 +9,28 @@
 <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-		<header class="main-header">
+		<header id="top"  class="main-header">
 			<div class="main-nav-container container clearfix">
 				<h1 class="name">Student Name</h1>
-				 <ul class="main-nav">
-			          <li><a href="#">home</a></li>
-			          <li><a href="#">portfolio</a></li>
-			          <li><a href="#">contact</a></li>
-	       		 </ul>
+				<nav>
+					 <ul class="main-nav">
+				          <li><a href="#top">home</a></li>
+				          <li><a href="#portfolio">portfolio</a></li>
+				          <li><a href="#contact">contact</a></li>
+		       		 </ul>
+	       		</nav><!-- / nav  -->
 	       	</div><!-- / container  -->
 		</header>
 
 		<main>
-			<section class="about-me">
+			<section id="about-me" class="about-me">
 				<div class="container clearfix">
 					<img src="images/responsive-layout-profile.png" alt="developer-face">
 					<p>Hi! I', a front-end developer who loves responsive design and css. I recently finished learning front-end web development at Treehouse and i am excited to put all my skills to use!</p>
 				</div><!-- / container  -->
 			</section><!-- / about-me  -->
 
-			<section class="portfolio">
+			<section id="portfolio" class="portfolio">
 					<div class="container clearfix">
 						<h2>portfolio</h2>
 							<div class="portfolio-container">
@@ -69,7 +71,7 @@
 					</div><!-- / container  -->
 			</section><!-- / portfolio  -->
 
-			<section class="contact">
+			<section id="contact" class="contact">
 				<div class="container clearfix">
 					<h2>contact</h2>
 					<p>if you're interested in chatting or want more information about what i've been working on, i'd love to hear from you!</p>
@@ -88,11 +90,11 @@
 					<div class="footer-left">Student Name</div>
 					<div class="footer-right">
 						<ul class="footer-nav">
-				          <li><a href="#">home</a></li>
-				          <li><a href="#">portfolio</a></li>
-				          <li><a href="#">contact</a></li>
+				          <li><a href="#top">home</a></li>
+				          <li><a href="#portfolio">portfolio</a></li>
+				          <li><a href="#contact">contact</a></li>
 		       		 	</ul>
-						<span class="back-top-top">back to top</span>
+						<span class="back-top-top"><a href="#top">back to top</a></span>
 					</div>
 		       	</div><!-- / container  -->
 			</footer><!-- / footer  -->
