Change the color of at least one piece of text.
Change the color of at least one piece of text.

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 			<section id="about-me" class="about-me">
 				<div class="container clearfix">
 					<img src="images/responsive-layout-profile.png" alt="developer-face">
-					<p>Hi! I', a front-end developer who loves responsive design and css. I recently finished learning front-end web development at Treehouse and i am excited to put all my skills to use!</p>
+					<p>Hi! I'm a front-end developer who loves responsive design and css. I recently finished learning front-end web development at <span class="treehouse"><a href="https://teamtreehouse.com" target="new">Treehouse</a></span> and i am excited to put all my skills to use!</p>
 				</div><!-- / container  -->
 			</section><!-- / about-me  -->
 
