Add one additional google font that is being used on the page.
Roboto fonts for PORTFOLIO description

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 <title>Responsive Layout</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600i,700" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
 <link rel="stylesheet" href="css/normalize.css">
 <link rel="stylesheet" href="css/main.css">
 </head>
