--- a/index.html
+++ b/index.html
@@ -1,110 +1,103 @@
 <!doctype html>
 <html lang="en">
-<head>
-<meta charset="utf-8">
-<title>Responsive Layout</title>
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600i,700" rel="stylesheet">
-<link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
-<link rel="stylesheet" href="css/normalize.css">
-<link rel="stylesheet" href="css/main.css">
-</head>
-<body>
-		<header id="top"  class="main-header">
-			<div class="main-nav-container container clearfix">
-				<h1 class="name">Student Name</h1>
-				<nav>
-					 <ul class="main-nav">
-				          <li><a href="#top">home</a></li>
-				          <li><a href="#portfolio">portfolio</a></li>
-				          <li><a href="#contact">contact</a></li>
-		       		 </ul>
-	       		</nav><!-- / nav  -->
-	       	</div><!-- / container  -->
-		</header>
-
-		<main>
-			<section id="about-me" class="about-me">
-				<div class="container clearfix">
-					<img src="images/responsive-layout-profile.png" alt="developer-face">
-					<p>Hi! I'm a front-end developer who loves responsive design and css. I recently finished learning front-end web development at <span class="treehouse"><a href="https://teamtreehouse.com" target="new">Treehouse</a></span> and i am excited to put all my skills to use!</p>
-				</div><!-- / container  -->
-			</section><!-- / about-me  -->
-
-			<section id="portfolio" class="portfolio">
-					<div class="container clearfix">
-						<h2>portfolio</h2>
-							<div class="portfolio-container">
-								<div class="portfolio-item">
-									<img class="portfolio-item-img" src="images/portfolio-1.png" alt="developer-face">
-									<h3>Marketing Page</h3>
-									<p>This project shows the front page of a marketing website meant for a specific business I'm interested in.</p>
-								</div>
-								<div class="portfolio-item">
-									<img class="portfolio-item-img" src="images/portfolio-2.png" alt="developer-face">
-									<h3>Search Page</h3>
-									<p>This project searched through a specific database to find information that the user is trying to look up.</p>
-								</div>
-								<div class="portfolio-item">
-									<img class="portfolio-item-img" src="images/portfolio-3.png" alt="developer-face">
-									<h3>Travel App</h3>
-									<p>This project searched through a specific database to find information that the user is trying to look up.</p>
-								</div>
-
-								<div class="portfolio-item">
-									<img class="portfolio-item-img" src="images/portfolio-4.png" alt="developer-face">
-									<h3>Map of Favorote Spots</h3>
-									<p>This project compares travel times base on different traansportation method snad tells you the best one.</p>
-								</div>
-
-								<div class="portfolio-item">
-									<img class="portfolio-item-img" src="images/portfolio-5.png" alt="developer-face">
-									<h3>Photo Gallery</h3>
-									<p>This project shows pictures from a recent trip to the viewer and allows them to eaily nagate through photos</p>
-								</div>
-
-								<div class="portfolio-item">
-									<img class="portfolio-item-img" src="images/portfolio-6.png" alt="developer-face">
-									<h3>Calculator</h3>
-									<p>Someone can enter in the numbers they want, and press the big blue button and get the result</p>
-								</div>
-							</div>
-					</div><!-- / container  -->
-			</section><!-- / portfolio  -->
-
-			<section id="contact" class="contact">
-				<div class="container clearfix">
-					<h2>contact</h2>
-					<p>if you're interested in chatting or want more information about what i've been working on, i'd love to hear from you!</p>
-					<p>Phone&nbsp;&nbsp;<strong>+1(111)555-1234</strong></p>
-					<p>Email&nbsp;&nbsp;<strong>email@yourside.com</strong></p>
-				</div><!-- / portfolio  -->
-			</section><!-- / contact  -->
-
-
-
-
-
-			<footer class="main-footer">
-				<div class="container clearfix">
-					<hr class="seperate-style" />
-					<div class="footer-left">Student Name</div>
-					<div class="footer-right">
-						<ul class="footer-nav">
-				          <li><a href="#top">home</a></li>
-				          <li><a href="#portfolio">portfolio</a></li>
-				          <li><a href="#contact">contact</a></li>
-		       		 	</ul>
-						<span class="back-top-top"><a href="#top">back to top</a></span>
-					</div>
-		       	</div><!-- / container  -->
-			</footer><!-- / footer  -->
-
-
-
-
-
-
-		</main>
-</body>
+   <head>
+      <meta charset="utf-8">
+      <title>Responsive Layout</title>
+      <meta name="viewport" content="width=device-width, initial-scale=1.0">
+      <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600i,700" rel="stylesheet">
+      <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
+      <link rel="stylesheet" href="css/normalize.css">
+      <link rel="stylesheet" href="css/main.css">
+   </head>
+   <body>
+      <header id="top"  class="main-header">
+         <div class="main-nav-container container clearfix">
+            <h1 class="name">Michael Lau</h1>
+            <nav>
+               <ul class="main-nav">
+                  <li><a href="#top">home</a></li>
+                  <li><a href="#portfolio">portfolio</a></li>
+                  <li><a href="#contact">contact</a></li>
+               </ul>
+            </nav>
+            <!-- / nav  -->
+         </div>
+         <!-- / container  -->
+      </header>
+      <main>
+         <section id="about-me" class="about-me">
+            <div class="container clearfix">
+               <img src="images/responsive-layout-profile.png" alt="developer-face">
+               <p>Hi! I'm a front-end developer who loves responsive design and css. I recently finished learning front-end web development at <span class="treehouse"><a href="https://teamtreehouse.com" target="new">Treehouse</a></span> and i am excited to put all my skills to use!</p>
+            </div>
+            <!-- / container  -->
+         </section>
+         <!-- / about-me  -->
+         <section id="portfolio" class="portfolio">
+            <div class="container clearfix">
+               <h2>portfolio</h2>
+               <div class="portfolio-container">
+                  <div class="portfolio-item">
+                     <img class="portfolio-item-img" src="images/portfolio-1.png" alt="developer-face">
+                     <h3>Marketing Page</h3>
+                     <p>This project shows the front page of a marketing website meant for a specific business I'm interested in.</p>
+                  </div>
+                  <div class="portfolio-item">
+                     <img class="portfolio-item-img" src="images/portfolio-2.png" alt="developer-face">
+                     <h3>Search Page</h3>
+                     <p>This project searched through a specific database to find information that the user is trying to look up.</p>
+                  </div>
+                  <div class="portfolio-item">
+                     <img class="portfolio-item-img" src="images/portfolio-3.png" alt="developer-face">
+                     <h3>Travel App</h3>
+                     <p>This project searched through a specific database to find information that the user is trying to look up.</p>
+                  </div>
+                  <div class="portfolio-item">
+                     <img class="portfolio-item-img" src="images/portfolio-4.png" alt="developer-face">
+                     <h3>Map of Favorote Spots</h3>
+                     <p>This project compares travel times base on different traansportation method snad tells you the best one.</p>
+                  </div>
+                  <div class="portfolio-item">
+                     <img class="portfolio-item-img" src="images/portfolio-5.png" alt="developer-face">
+                     <h3>Photo Gallery</h3>
+                     <p>This project shows pictures from a recent trip to the viewer and allows them to eaily nagate through photos</p>
+                  </div>
+                  <div class="portfolio-item">
+                     <img class="portfolio-item-img" src="images/portfolio-6.png" alt="developer-face">
+                     <h3>Calculator</h3>
+                     <p>Someone can enter in the numbers they want, and press the big blue button and get the result</p>
+                  </div>
+               </div>
+            </div>
+            <!-- / container  -->
+         </section>
+         <!-- / portfolio  -->
+         <section id="contact" class="contact">
+            <div class="container clearfix">
+               <h2>contact</h2>
+               <p>if you're interested in chatting or want more information about what i've been working on, i'd love to hear from you!</p>
+               <p>Phone&nbsp;&nbsp;<strong>+(852)6536-8584</strong></p>
+               <p>Email&nbsp;&nbsp;<strong><a href="mailto:nullmicgo@gmail.com">nullmicgo@gmail.com</a></strong></p>
+            </div>
+            <!-- / portfolio  -->
+         </section>
+         <!-- / contact  -->
+         <footer class="main-footer">
+            <div class="container clearfix">
+               <hr class="seperate-style" />
+               <div class="footer-left">Michael Lau</div>
+               <div class="footer-right">
+                  <ul class="footer-nav">
+                     <li><a href="#top">home</a></li>
+                     <li><a href="#portfolio">portfolio</a></li>
+                     <li><a href="#contact">contact</a></li>
+                  </ul>
+                  <span class="back-top-top"><a href="#top">back to top</a></span>
+               </div>
+            </div>
+            <!-- / container  -->
+         </footer>
+         <!-- / footer  -->
+      </main>
+   </body>
 </html>
