Add the Nav back for the footer menu
Add the Nav back for the footer menu

--- a/index.html
+++ b/index.html
@@ -87,11 +87,13 @@
                <hr class="seperate-style" />
                <div class="footer-left">Michael Lau</div>
                <div class="footer-right">
-                  <ul class="footer-nav">
-                     <li><a href="#top">home</a></li>
-                     <li><a href="#portfolio">portfolio</a></li>
-                     <li><a href="#contact">contact</a></li>
-                  </ul>
+                  <nav>
+                     <ul class="footer-nav">
+                        <li><a href="#top">home</a></li>
+                        <li><a href="#portfolio">portfolio</a></li>
+                        <li><a href="#contact">contact</a></li>
+                     </ul>
+                  </nav>
                   <span class="back-top-top"><a href="#top">back to top</a></span>
                </div>
             </div>
