Change section to me div
After checking in https://validator.w3.org/nu/#textarea ,
it asked my to consider using h2-h6 elements to add identifying headings to all sections.
but i don't have heading in the Mock Up Layout, so i changed to use div instead

--- a/index.html
+++ b/index.html
@@ -25,14 +25,14 @@
          <!-- / container  -->
       </header>
       <main>
-         <section id="about-me" class="about-me">
+         <div id="about-me" class="about-me">
             <div class="container clearfix">
                <img src="images/responsive-layout-profile.png" alt="developer-face">
                <p>Hi! I'm a front-end developer who loves responsive design and css. I recently finished learning front-end web development at <span class="treehouse"><a href="https://teamtreehouse.com" target="new">Treehouse</a></span> and i am excited to put all my skills to use!</p>
             </div>
             <!-- / container  -->
-         </section>
-         <!-- / about-me  -->
+         </div><!-- / about-me  -->
+         
          <section id="portfolio" class="portfolio">
             <div class="container clearfix">
                <h2>portfolio</h2>
